test_data/end_to_end/err__range_mismatching_start_end_types/stderr.txt
error: mismatching types in range literal: start bound is `String`, end bound is `<integer>`
  --> main.cz:2:5
2 |     "test"..42;
        ~~~~~~~~~~

error: mismatching types in range literal: start bound is `String`, end bound is `{}`
  --> main.cz:7:5
7 |     s()..e();
        ~~~~~~~~

error: mismatching types in range literal: start bound is `S`, end bound is `E`
  --> main.cz:10:9
10 |         s..e;
             ~~~~
